--- a/UsWitchMap/index.html
+++ b/UsWitchMap/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title> This is a test </title>
+	<title>United States Witch and Folklore Map</title>
 	<h1 style="font-family:verdana"> United States History of Magic and Urban Legend Map </h1>
 	<style>
 	body {
@@ -71,7 +71,7 @@
     <area target="" alt="New Jersey" title="New Jersey" href="" coords="1335,337,1333,364,1347,373,1341,384,1332,396,1337,408,1345,415,1353,419,1360,407,1363,391,1365,378,1363,368,1356,354,1359,344" shape="poly" onmouseover="maphover.src='assets/maps/BlankMap-USA-NewJersey.png'" onmouseout = "maphover.src='assets/maps/BlankMap-USA-states.png'">
     <area target="" alt="New York" title="New York" href="" coords="1317,316,1202,336,1201,328,1220,308,1213,290,1246,281,1264,281,1280,269,1277,253,1273,245,1281,237,1298,213,1319,207,1337,203,1345,221,1347,235,1349,249,1356,257,1359,277,1360,296,1360,309,1364,328,1363,336,1365,346,1376,342,1389,334,1401,332,1405,338,1395,344,1381,353,1368,354,1355,340,1345,334,1333,330" shape="poly" onmouseover="maphover.src='assets/maps/BlankMap-USA-NewYork.png'" onmouseout = "maphover.src='assets/maps/BlankMap-USA-states.png'">
     <area target="" alt="Connecticut" title="Connecticut" href="" coords="1365,309,1369,330,1369,338,1385,328,1400,324,1409,317,1404,300,1384,301" shape="poly" onmouseover="maphover.src='assets/maps/BlankMap-USA-Connecticut.png'" onmouseout = "maphover.src='assets/maps/BlankMap-USA-states.png'">
-    <area target="" alt="Massachusetts" title="Massachusetts" href="Massachusetts.html" coords="1363,280,1365,300,1404,294,1420,290,1428,302,1439,297,1455,292,1436,289,1427,281,1419,277,1427,265,1420,262,1408,270,1388,276" shape="poly" onmouseover="maphover.src='assets/maps/BlankMap-USA-Massachusetts.png'" onmouseout = "maphover.src='assets/maps/BlankMap-USA-states.png'">
+    <area target="" alt="Massachusetts" title="Massachusetts" href="assets/pages/Massachusetts/Massachusetts.html" coords="1363,280,1365,300,1404,294,1420,290,1428,302,1439,297,1455,292,1436,289,1427,281,1419,277,1427,265,1420,262,1408,270,1388,276" shape="poly" onmouseover="maphover.src='assets/maps/BlankMap-USA-Massachusetts.png'" onmouseout = "maphover.src='assets/maps/BlankMap-USA-states.png'">
     <area target="" alt="Rhode Island" title="Rhode Island" href="" coords="1409,298,1415,318,1425,310,1419,296" shape="poly" onmouseover="maphover.src='assets/maps/BlankMap-USA-RhodeIsland.png'" onmouseout = "maphover.src='assets/maps/BlankMap-USA-states.png'">
     <area target="" alt="Vermont" title="Vermont" href="" coords="1341,201,1352,241,1361,265,1363,274,1377,270,1377,250,1380,227,1375,219,1384,209,1381,193" shape="poly" onmouseover="maphover.src='assets/maps/BlankMap-USA-Vermont.png'" onmouseout = "maphover.src='assets/maps/BlankMap-USA-states.png'">
     <area target="" alt="New Hampshire" title="New Hampshire" href="" coords="1421,257,1409,263,1381,271,1380,257,1383,231,1380,221,1385,213,1387,195,1389,181,1395,190,1407,233" shape="poly" onmouseover="maphover.src='assets/maps/BlankMap-USA-NewHampshire.png'" onmouseout = "maphover.src='assets/maps/BlankMap-USA-states.png'">
