added many more states

--- a/UsWitchMap/assets/pages/Massachusetts/Massachusetts.html
+++ b/UsWitchMap/assets/pages/Massachusetts/Massachusetts.html
@@ -54,7 +54,7 @@
 								<span>1</span><a href="#">History</a>
 								<ul>
 									<li><span>1.1</span><a href="#Salem">Salem Witch Trials</a> </li>
-									<li><span>1.2</span><a href="#">The Bloody Pit</a></li>
+									<li><span>1.2</span><a href="#BloodyPit">The Bloody Pit</a></li>
 									<li><span>1.3</span><a href="#References">References</a></li>						
 								</ul>
 							</li>
