--- a/UsWitchMap/assets/pages/Idaho/Idaho.html
+++ b/UsWitchMap/assets/pages/Idaho/Idaho.html
@@ -25,7 +25,7 @@
 
 <body>
 	
-	<a style="float:left;" href="../../../../index.html">Back to the map</a>
+	<a style="float:left;" href="../../../map.html">Back to the map</a>
 	<br>
 	
 	<div class="container">
@@ -71,7 +71,7 @@
 				
 				
 		<h2 id="References" style = "border-bottom: 1px solid #a2a9b1;"> References </h2>
-		<p id = "section1">[1] “Ghosts of Isu.” Idaho State University,  <a href = "https://www.isu.edu/maps/more-maps/ghosts-of-isu/"> https://www.isu.edu/maps/more-maps/ghosts-of-isu/ </a> </p> 
+		<p id = "section1">[1] “Ghosts of Isu.” Idaho State University,  <a href = "https://www.isu.e../maps/more-../maps/ghosts-of-isu/"> https://www.isu.e../maps/more-../maps/ghosts-of-isu/ </a> </p> 
 		
 </div>
 
