--- a/UsWitchMap/assets/pages/California/California.html
+++ b/UsWitchMap/assets/pages/California/California.html
@@ -25,7 +25,7 @@
 
 <body>
 	
-	<a style="float:left;" href="../../../../index.html">Back to the map</a>
+	<a style="float:left;" href="../../../map.html">Back to the map</a>
 	<br>
 	
 	<div class="container">
