added new icon to the main page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 		<span>Click this image to get to the Interative US Witch Map. </span>
 	</div>
 </div>
+<br>
+
+<div class = "container">
+	<div class="hover11">
+		<figure><a href="UsWitchMap/map.html"><img src="Images/CrazyArt.png" width="700" height="480"></a> </figure>
+		<span>Click this image to get to the Interative US Witch Map. </span>
+	</div>
+</div>
+<br>
 
 </body>
 
