--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <head>
 	<link rel="stylesheet" href="hover.css">
 	<title>United States Witch and Folklore Map</title>
-	<h2 style="font-family:verdana"> United States History of Magic and Urban Legend Map </h2>
 	<style>
 	body {
 		padding: 0;
@@ -25,6 +24,7 @@
 <body>
 <div class = "container">
 	<div class="hover11">
+		<h3 style="font-family:verdana"> United States History of Magic and Urban Legend Map </h3>
 		<figure><a href="UsWitchMap/map.html"><img src="UsWitchMap/assets/maps/BlankMap-USA-states.png" width="700" height="480"></a> </figure>
 		<span>Click this image to get to the Interative US Witch Map. </span>
 	</div>
@@ -33,8 +33,9 @@
 
 <div class = "container">
 	<div class="hover11">
-		<figure><a href="UsWitchMap/map.html"><img src="Images/CrazyArt.png" width="700" height="480"></a> </figure>
-		<span>Click this image to get to the Interative US Witch Map. </span>
+		<h3 style="font-family:verdana"> Text Based RPG Game </h3>
+		<figure><a href="GameRPG/GameRPG.html"><img src="Images/CrazyArt.png" width="700" height="480"></a> </figure>
+		<span> Are you ready to play the best text-based RPG game you've ever seen? (No sarcasm) </span>
 	</div>
 </div>
 <br>
