--- a/GameRPG/GameRPG.html
+++ b/GameRPG/GameRPG.html
@@ -5,10 +5,11 @@
 
 
 <head>
+<link rel="stylesheet" href="css/GameRPG.css">
 <body>
 <a style="float:left;" href="../index.html">Go Back</a>
 <br>
-<iframe frameborder="0" marginwidth = "150" width="80%" height="500px" src="https://replit.com/@KinoUBIV/Attacking-in-turns-Very-useful?embed=true"></iframe>
+<iframe frameborder="0" marginwidth = "150" width="80%" height="500px" src="https://replit.com/@KinoUBIV/Attacking-in-turns-Very-useful?embed=true?lite=true"></iframe>
 </body>
 </head>
 
