added new stuff

--- a/index.html
+++ b/index.html
@@ -35,10 +35,18 @@
 	<div class="hover11">
 		<h3 style="font-family:verdana"> Text Based RPG Game </h3>
 		<figure><a href="GameRPG/GameRPG.html"><img src="Images/CrazyArt.png" width="700" height="480"></a> </figure>
-		<span> Are you ready to play the best text-based RPG game you've ever seen? (No sarcasm) </span>
+		<span> Are you ready to play the best text-based RPG game you've ever seen? (No kyap) </span>
 	</div>
 </div>
 <br>
+
+<div class = "container">
+	<div class="hover11">
+		<h3 style="font-family:verdana"> Text Based RPG Game </h3>
+		<figure><a href="ScriptAnimation/ScriptAnimation.html"><img src="Images/CrazyArt.png" width="700" height="480"></a> </figure>
+		<span> Script animation test. </span>
+	</div>
+</div>
 
 </body>
 
