--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+#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 - Github Token
+
 <html>
 
 <head>
@@ -42,8 +44,8 @@
 
 <div class = "container">
 	<div class="hover11">
-		<h3 style="font-family:verdana"> Text Based RPG Game </h3>
-		<figure><a href="ScriptAnimation/ScriptAnimation.html"><img src="Images/CrazyArt.png" width="700" height="480"></a> </figure>
+		<h3 style="font-family:verdana"> ScriptAnimation </h3>
+		<figure><a href="ScriptAnimation/ScriptAnimation.html"><img src="Images/Theman.png" width="700" height="480"></a> </figure>
 		<span> Script animation test. </span>
 	</div>
 </div>
