--- a/ScriptAnimation/ScriptAnimation.html
+++ b/ScriptAnimation/ScriptAnimation.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="ScriptAnimation.css">
+
 <div id="demo">
   <p id="image" onmouseover="animateScript()" onmouseout="stopAnimate()">
 
