script animation confirmed

--- a/ScriptAnimation/ScriptAnimation.html
+++ b/ScriptAnimation/ScriptAnimation.html
@@ -1,7 +1,9 @@
 <link rel="stylesheet" href="ScriptAnimation.css">
+<script src="ScriptAnimation.js"></script>
 
 <div id="demo">
   <p id="image" onmouseover="animateScript()" onmouseout="stopAnimate()">
-
+	<script>
+</script>
   </p>
 </div>
