--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
 	</div>
 </div>
 
+<div class = "container">
+	<div class="hover11">
+		<h3 style="font-family:verdana"> ScriptAnimation </h3>
+		<figure><a href="movierating/movierating.html"><img src="Images/redtitle.png" width="700" height="480"></a> </figure>
+		<span> Script animation test. </span>
+	</div>
+</div>
+
+
 </body>
 
 </html>
