--- a/index.html
+++ b/index.html
@@ -51,9 +51,17 @@
 
 <div class = "container">
 	<div class="hover11">
-		<h3 style="font-family:verdana"> ScriptAnimation </h3>
+		<h3 style="font-family:verdana"> Movie Rating </h3>
 		<figure><a href="movierating/movierating.html"><img src="Images/redtitle.png" width="700" height="480"></a> </figure>
-		<span> Script animation test. </span>
+		<span> Movie Rating. </span>
+	</div>
+</div>
+
+<div class = "container">
+	<div class="hover11">
+		<h3 style="font-family:verdana"> This is a test </h3>
+		<figure><a href="movierating/movierating.html"><img src="Images/redtitle.png" width="700" height="480"></a> </figure>
+		<span> This is a test. </span>
 	</div>
 </div>
 
