changed background color

--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -6,7 +6,7 @@
 
 <head>
 <link rel="stylesheet" href="css/GameRPG.css">
-<body>
+<body style = "background-color: #fdf9d3;">
     Test
 </body>
 </head>
