--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -7,7 +7,23 @@
 <head>
 <link rel="stylesheet" href="css/GameRPG.css">
 <body style = "background-color: #fdf9d3;">
-    Test
+
+    <div class="contentsPanel">
+						<div class="contentsHeader" style="background-color:#e8dc8c;">Contents</div>
+						<ul>
+							<li>
+								<span>1</span><a href="#">Arcane Deity</a>
+								<ul>
+									<li><span>1.1</span><a href="#godlyWeapons">Godly Weapons</a> </li>
+									<li><span>1.2</span><a href="#creation">Creating an Arcane Deity</a></li>						
+								</ul>
+							</li>
+					
+						</ul>
+	</div>
+
+    <div id="godlyWeapons"> </div>
+    <div id="creation"> </div>
 </body>
 </head>
 
