--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -12,7 +12,7 @@
 </head>
 
 <body style="background-color: #fdf9d3;">
-
+    <div id = "page-content" class="page-content">
     <div class="contentsPanel">
         <div class="contentsHeader" style="background-color:#e8dc8c;">Contents</div>
         <ul>
@@ -26,6 +26,7 @@
             </li>
 
         </ul>
+    </div>
     </div>
 
     <div id="godlyWeapons"> </div>
