--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -7,26 +7,26 @@
 <head>
     <link rel="stylesheet" href="css/GameRPG.css">
     <link rel="stylesheet" href="../../css/style.css">
-	<link rel="stylesheet" href="../../css/style1.css">
-	<link rel="stylesheet" href="../../css/banner.css">
+    <link rel="stylesheet" href="../../css/style1.css">
+    <link rel="stylesheet" href="../../css/banner.css">
 </head>
 
 <body style="background-color: #fdf9d3;">
-    <div id = "page-content" class="page-content">
-    <div class="contentsPanel">
-        <div class="contentsHeader" style="background-color:#e8dc8c;">Contents</div>
-        <ul>
-            <li>
-                <span>1</span><a href="#">Arcane Deity</a>
-                <ul>
-                    <li><span>1.1</span><a href="#godlyWeapons">Godly Weapons</a> </li>
-                    <li><span>1.2</span><a href="#creation">Creating an Arcane Deity</a></li>
-                    <li><span>1.2</span><a href="#classFeatures">Class Features</a></li>
-                </ul>
-            </li>
+    <div id="page-content" class="page-content">
+        <div class="contentsPanel">
+            <div class="contentsHeader">Contents</div>
+            <ul>
+                <li>
+                    <span>1</span><a href="#">Arcane Deity</a>
+                    <ul>
+                        <li><span>1.1</span><a href="#godlyWeapons">Godly Weapons</a> </li>
+                        <li><span>1.2</span><a href="#creation">Creating an Arcane Deity</a></li>
+                        <li><span>1.2</span><a href="#classFeatures">Class Features</a></li>
+                    </ul>
+                </li>
 
-        </ul>
-    </div>
+            </ul>
+        </div>
     </div>
 
     <div id="godlyWeapons"> </div>
