--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -2,19 +2,16 @@
 
 <html>
 
-
-
 <head>
     <link rel="stylesheet" href="css/GameRPG.css">
-    <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/style1.css">
-    <link rel="stylesheet" href="../../css/banner.css">
+    <link rel="stylesheet" href="../UsWitchMap/assets/css/style.css">
+    <link rel="stylesheet" href="../UsWitchMap/assets/css/style1.css">
+    <link rel="stylesheet" href="../UsWitchMap/assets/css/banner.css">
 </head>
 
 <body style="background-color: #fdf9d3;">
-    <div id="page-content" class="page-content">
         <div class="contentsPanel">
-            <div class="contentsHeader">Contents</div>
+            <div class="contentsHeader" style="background-color:#e8dc8c;">Contents</div>
             <ul>
                 <li>
                     <span>1</span><a href="#">Arcane Deity</a>
@@ -27,7 +24,6 @@
 
             </ul>
         </div>
-    </div>
 
     <div id="godlyWeapons"> </div>
     <div id="creation"> </div>
