--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -10,6 +10,7 @@
 </head>
 
 <body style="background-color: #fdf9d3;">
+    <div class="contentsPanel">
         <div class="contentsPanel">
             <div class="contentsHeader" style="background-color:#e8dc8c;">Contents</div>
             <ul>
@@ -28,6 +29,8 @@
     <div id="godlyWeapons"> </div>
     <div id="creation"> </div>
     <div id="classFeatures"> </div>
+
+    </div>
 </body>
 
 </html>
