trying something else

--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -10,7 +10,7 @@
 </head>
 
 <body style="background-color: #fdf9d3;">
-    <div class="contentsPanel">
+    <div id = "page-content" class="page-content">
         <div class="contentsPanel">
             <div class="contentsHeader" style="background-color:#e8dc8c;">Contents</div>
             <ul>
@@ -30,7 +30,7 @@
     <div id="creation"> </div>
     <div id="classFeatures"> </div>
 
-    </div>
+</div>
 </body>
 
 </html>
