changed background color, fixed formatting

--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -10,7 +10,7 @@
 </head>
 
 <body style="background-color: #fdf9d3;">
-    <div id = "page-content" class="page-content">
+    <div id = "page-content" class="page-content" style="background-color: #fdf9d3;">
         <div class="contentsPanel">
             <div class="contentsHeader" style="background-color:#e8dc8c;">Contents</div>
             <ul>
