added some margins

--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -11,8 +11,8 @@
 
 <body style="background-color: #fdf9d3;">
     <div id = "page-content" class="page-content" style="background-color: #fdf9d3;">
-        <div class="contentsPanel">
-            <div class="contentsHeader" style="background-color:#e8dc8c; margin-top: 30px;">Contents</div>
+        <div class="contentsPanel" style="margin-top: 30px;">
+            <div class="contentsHeader" style="background-color:#e8dc8c;">Contents</div>
             <ul>
                 <li>
                     <span>1</span><a href="#">Arcane Deity</a>
