fixed the contents background color

--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -13,8 +13,8 @@
     
     <div id = "page-content" class="page-content" style="background-color: #fdf9d3;">
         <h1 style = "border-bottom: 1px solid #a2a9b1;">Arcane Deity</h1>
-        <div class="contentsPanel" style="margin-top: 30px;">
-            <div class="contentsHeader" style="background-color:#e8dc8c;">Contents</div>
+        <div class="contentsPanel" style="margin-top: 30px; background-color:#e8dc8c;">
+            <div class="contentsHeader">Contents</div>
             <ul>
                 <li>
                     <span>1</span><a href="#">Arcane Deity</a>
