--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -12,7 +12,7 @@
 <body style="background-color: #fdf9d3;">
     
     <div id = "page-content" class="page-content" style="background-color: #fdf9d3;">
-        <h1 style = "border-bottom: 1px solid #a2a9b1;">Arcane Deity</h1>
+        <h2 style = "border-bottom: 1px solid #a2a9b1;">Arcane Deity (5e Class) </h2>
         <div class="contentsPanel" style="margin-top: 30px; background-color:#e8dc8c;">
             <div class="contentsHeader">Contents</div>
             <ul>
@@ -21,7 +21,7 @@
                     <ul>
                         <li><span>1.1</span><a href="#godlyWeapons">Godly Weapons</a> </li>
                         <li><span>1.2</span><a href="#creation">Creating an Arcane Deity</a></li>
-                        <li><span>1.2</span><a href="#classFeatures">Class Features</a></li>
+                        <li><span>1.3</span><a href="#classFeatures">Class Features</a></li>
                     </ul>
                 </li>
 
