--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -21,7 +21,12 @@
                     <ul>
                         <li><span>1.1</span><a href="#godlyWeapons">Godly Weapons</a> </li>
                         <li><span>1.2</span><a href="#creation">Creating an Arcane Deity</a></li>
-                        <li><span>1.3</span><a href="#classFeatures">Class Features</a></li>
+                        <span>1.3</span><a href="#classFeatures">Class Features</a>
+                        <ul>
+                            <li>><span>1.3.1</span><a href="#testing">testing</a></li>
+                        </ul>                   
+                    
+                    
                     </ul>
                 </li>
 
