--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -18,7 +18,7 @@
             <ul>
                 <li>
                     <span>1</span><a href="#">Arcane Deity</a>
-                    <ul>
+                    <ul style="margin-left: 5px;">
                         <li><span>1.1</span><a href="#godlyWeapons">Godly Weapons</a> </li>
                         <li><span>1.2</span><a href="#creation">Creating an Arcane Deity</a></li>
                         <li><span>1.3</span><a href="#classFeatures">Class Features</a></li>
