--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -23,7 +23,10 @@
                         <li><span>1.2</span><a href="#creation">Creating an Arcane Deity</a></li>
                         <li><span>1.3</span><a href="#classFeatures">Class Features</a></li>
                         <ul style="margin-left: 25px;">
-                            <li><span>1.3.1</span><a href="#testing">testing</a></li>
+                            <li><span>1.3.1</span><a href="#table">Table: Arcane Deity</a></li>
+                            <li><span>1.3.2</span><a href="#sneakAttack">Sneak Attack</a></li>
+                            <li><span>1.3.3</span><a href="#thievesCant">Thieves' Cant</a></li>
+                            <li><span>1.3.4<span><a href="#etherealBlade">Ethereal Blade</a></li>
                         </ul>                   
                     
                     
