--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="../UsWitchMap/assets/css/style.css">
     <link rel="stylesheet" href="../UsWitchMap/assets/css/style1.css">
     <link rel="stylesheet" href="../UsWitchMap/assets/css/banner.css">
+
+    <style>
+        table {
+          font-family: arial, sans-serif;
+          border-collapse: collapse;
+          width: 100%;
+        }
+        
+        td, th {
+          border: 1px solid #dddddd;
+          text-align: left;
+          padding: 8px;
+        }
+        
+        tr:nth-child(even) {
+          background-color: #dddddd;
+        }
+        </style>
+
 </head>
 
 <body style="background-color: #fdf9d3;">
@@ -37,7 +56,24 @@
         <div id="godlyWeapons"> </div>
         <div id="creation"> </div>
         <div id="classFeatures"> </div>
-        <div id="table"> </div>
+        <div id="table"> 
+            <table>
+                <tr>
+                  <th>Company</th>
+                  <th>Contact</th>
+                  <th>Country</th>
+                </tr>
+                <tr>
+                  <td>Alfreds Futterkiste</td>
+                  <td>Maria Anders</td>
+                  <td>Germany</td>
+                </tr>
+                <tr>
+                  <td>Centro comercial Moctezuma</td>
+                  <td>Francisco Chang</td>
+                  <td>Mexico</td>
+                </tr>
+        </div>
         <div id="sneakAttack"> </div>
         <div id="thievesCant"> </div>
         <div id="etherealBlade"> </div>
