trying to put a max width on this table

--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -58,7 +58,7 @@
         <div id="creation"> </div>
         <div id="classFeatures"> </div>
         <div id="table"> 
-            <table>
+            <table style="max-width: 30%;">
                 <tr>
                   <th>Company</th>
                   <th>Contact</th>
