changed the things in the tabke

--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -60,19 +60,20 @@
         <div id="table"> 
             <table style="max-width: 30%;">
                 <tr>
-                  <th>Company</th>
-                  <th>Contact</th>
-                  <th>Country</th>
+                  <th>Level</th>
+                  <th>Bonus</th>
+                  <th>Features</th>
+                  <th>Sneak Attack Damage</th>
                 </tr>
                 <tr>
-                  <td>Alfreds Futterkiste</td>
-                  <td>Maria Anders</td>
-                  <td>Germany</td>
+                  <td>1st</td>
+                  <td>Ethereal Blade, Sneak Attack, Thieves Cant</td>
+                  <td>1d6</td>
                 </tr>
                 <tr>
-                  <td>Centro comercial Moctezuma</td>
-                  <td>Francisco Chang</td>
-                  <td>Mexico</td>
+                  <td>2nd</td>
+                  <td>Holy Gun</td>
+                  <td>3d6</td>
                 </tr>
         </div>
         <div id="sneakAttack"> </div>
