changed the things in the table

--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -16,13 +16,13 @@
         }
         
         td, th {
-          border: 1px solid #dddddd;
+          border: 1px solid #e8e4c4;
           text-align: left;
           padding: 8px;
         }
         
         tr:nth-child(even) {
-          background-color: #dddddd;
+          background-color: #e8e4c4;
         }
         </style>
 
@@ -67,14 +67,28 @@
                 </tr>
                 <tr>
                   <td>1st</td>
+                  <td>+2</td>
                   <td>Ethereal Blade, Sneak Attack, Thieves Cant</td>
                   <td>1d6</td>
                 </tr>
                 <tr>
                   <td>2nd</td>
+                  <td>+4</td>
                   <td>Holy Gun</td>
                   <td>3d6</td>
                 </tr>
+                <tr>
+                    <td>3rd</td>
+                    <td>+6</td>
+                    <td>Holy Grenade Launcher</td>
+                    <td>4.5d6</td>
+                  </tr>
+                  <tr>
+                    <td>4th</td>
+                    <td>+7</td>
+                    <td>Divine Missle Launcher</td>
+                    <td>5.5d6</td>
+                  </tr>
         </div>
         <div id="sneakAttack"> </div>
         <div id="thievesCant"> </div>
