added more things to the table

--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -89,6 +89,18 @@
                     <td>Divine Missle Launcher</td>
                     <td>5.5d6</td>
                   </tr>
+                  <tr>
+                    <td>5th</td>
+                    <td>+9</td>
+                    <td>Gum-Gum Pistol</td>
+                    <td>7d6</td>
+                  </tr>
+                  <tr>
+                    <td>6th</td>
+                    <td>+11</td>
+                    <td>Kamehameha, Rasengan</td>
+                    <td>9d6</td>
+                  </tr>
         </div>
         <div id="sneakAttack"> </div>
         <div id="thievesCant"> </div>
