--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -46,6 +46,12 @@
                             <li><span>1.3.2</span><a href="#sneakAttack">Sneak Attack</a></li>
                             <li><span>1.3.3</span><a href="#thievesCant">Thieves' Cant</a></li>
                             <li><span>1.3.4</span><a href="#etherealBlade">Ethereal Blade</a></li>
+                            <li><span>1.3.5</span><a href="#holyGun">Holy Gun</a></li>
+                            <li><span>1.3.6</span><a href="#holyGrenadeLauncher">Holy Grenade Launcher</a></li>
+                            <li><span>1.3.7</span><a href="#divineMissileLauncher">Divine Missle Launcher</a></li>
+                            <li><span>1.3.8</span><a href="#gum-gumPistol">Gum-Gum Pistol</a></li>
+                            <li><span>1.3.9</span><a href="#Kamehameha">Kamehameha</a></li>
+                            <li><span>1.3.10</span><a href="#Rasengan">Rasengan</a></li>
                         </ul>
                     </ul>
                 </li>
@@ -54,9 +60,15 @@
 
         <h2 style="border-bottom: 1px solid #a2a9b1;">Arcane Deity</h2>
 
+        Arcane Deities use magic and their divine energies to become nearly unstoppable assassins with great destructive and defensive capabilities. An Arcane Deity can use their power to warp reality to their will.
+
         <div id="godlyWeapons"> </div>
+        <h3>Ethereal Blade</h3>
         <div id="creation"> </div>
+        <h3>Creating an Arcane Deity</h3>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
         <div id="classFeatures"> </div>
+        <h3>Class Features</h3>
         <div id="table"> 
             <table style="max-width: 30%;">
                 <tr>
@@ -86,7 +98,7 @@
                   <tr>
                     <td>4th</td>
                     <td>+7</td>
-                    <td>Divine Missle Launcher</td>
+                    <td>Divine Missile Launcher</td>
                     <td>5.5d6</td>
                   </tr>
                   <tr>
@@ -102,9 +114,33 @@
                     <td>9d6</td>
                   </tr>
         </div>
-        <div id="sneakAttack"> </div>
-        <div id="thievesCant"> </div>
-        <div id="etherealBlade"> </div>
+        <div id="sneakAttack"> 
+            <h3>Sneak Attack</h3>
+        </div>
+        <div id="thievesCant">
+            <h3>Thieves' Cant</h3>
+        </div>
+        <div id="etherealBlade">
+            <h3>Ethereal Blade</h3>
+        </div>
+        <div id="holyGun"> 
+            <h3>Holy Gun</h3>
+        </div>
+        <div id="holyGrenadeLauncher"> 
+            <h3>Holy Grenade Launcher</h3>
+        </div>
+        <div id="divineMissileLauncher"> 
+            <h3>Divine Missile Launcher</h3>
+        </div>
+        <div id="#gum-gumPistol"> 
+            <h3>Gum-Gum Pistol</h3>
+        </div>
+        <div id="Kamehameha"> 
+            <h3>Kamehameha</h3>
+        </div>
+        <div id="Rasengan"> 
+            <h3>Rasengan</h3>
+        </div>
 
     </div>
 </body>
