--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -62,13 +62,17 @@
 
         Arcane Deities use magic and their divine energies to become nearly unstoppable assassins with great destructive and defensive capabilities. An Arcane Deity can use their power to warp reality to their will.
 
-        <div id="godlyWeapons"> </div>
-        <h3>Ethereal Blade</h3>
-        <div id="creation"> </div>
-        <h3>Creating an Arcane Deity</h3>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-        <div id="classFeatures"> </div>
-        <h3>Class Features</h3>
+        <div id="godlyWeapons"> 
+            <h3>Ethereal Blade</h3>
+        </div>
+        <div id="creation"> 
+            <h3>Creating an Arcane Deity</h3>
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        </div>
+        <div id="classFeatures"> 
+            <h3>Class Features</h3>
+        </div>
+
         <div id="table"> 
             <table style="max-width: 30%;">
                 <tr>
@@ -114,6 +118,7 @@
                     <td>9d6</td>
                   </tr>
         </div>
+
         <div id="sneakAttack"> 
             <h3>Sneak Attack</h3>
         </div>
