fixed positioning of the table

--- a/dndchar/dndchar.html
+++ b/dndchar/dndchar.html
@@ -73,6 +73,7 @@
             <h3>Class Features</h3>
         </div>
 
+        
         <div id="table"> 
             <table style="max-width: 30%;">
                 <tr>
@@ -117,7 +118,9 @@
                     <td>Kamehameha, Rasengan</td>
                     <td>9d6</td>
                   </tr>
+                </table>
         </div>
+    
 
         <div id="sneakAttack"> 
             <h3>Sneak Attack</h3>
